@@ -76,6 +76,7 @@ $wgNewFields = array(
 	array( 'archive',	    'ar_len',           'patch-ar_len.sql' ),
  	array( 'revision',	    'rev_parent_id',    'patch-rev_parent_id.sql' ),
 	array( 'page_restrictions', 'pr_id',		'patch-page_restrictions_sortkey.sql' ),
+	array( 'ipblocks',          'ipb_block_email',  'patch-ipb_emailban.sql' ),
 );
 
 function rename_table( $from, $to, $patch ) {
